tests/compile_fail/hash/unknown_variant_attribute.rs
#[derive(derive_more::Hash)]
enum MyEnum {
    #[hash(unknown)]
    A,
}
fn main() {}