tests/compile_fail/hash/unknown_variant_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/hash/unknown_variant_attribute.rs:3:12
  |
3 |     #[hash(unknown)]
  |            ^^^^^^^
